Improve ui styles.

--- a/utils/watcher/frontend/index.html
+++ b/utils/watcher/frontend/index.html
@@ -11,11 +11,11 @@
     <script defer src="/__/firebase/7.8.2/firebase-firestore.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
-    <style defer src="./style.css"></style>
   </head>
   <body>
     <div id="root"></div>
 
+    <link rel="stylesheet" type="text/css" href="./style.css"></style>
     <script src="./script.js"></script>
     <!-- <script>
       document.addEventListener("DOMContentLoaded", function() {
